--- a/statistics.html
+++ b/statistics.html
@@ -93,7 +93,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oBrAafww'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oBrAafww'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -179,7 +179,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/BACFDAE38A'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager, Statistical Programming - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/BACFDAE38A'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager, Statistical Programming - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -274,7 +274,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/0rzb2y6loQ/Statistical-Analyst'>Statistical Analyst - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/0rzb2y6loQ/Statistical-Analyst'>Statistical Analyst - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -343,7 +343,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/QuotientLimited/743999691337284-statistical-data-analyst'>Quotient Limited Statistical Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/QuotientLimited/743999691337284-statistical-data-analyst'>Quotient Limited Statistical Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -427,7 +427,7 @@ statistical?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-late-phase-home-based-eu-29895'>Principal Biostatistician - Late Phase - Home Based EU - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-late-phase-home-based-eu-29895'>Principal Biostatistician - Late Phase - Home Based EU - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -439,11 +439,11 @@ statistical?...</p>
 <p><span class="badge badge-light">Bengaluru, India</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://study1.applytojob.com/apply/Mp4KvevCRW/Statistics-Expert-QA-Contract'>Statistics Expert Q&amp;A (Contract) - Study.com - Career Page</a></h5> 
+<h5><a href='http://study1.applytojob.com/apply/Mp4KvevCRW/Statistics-Expert-QA-Contract'>Statistics Expert Q&amp;A (Contract) - Study.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999690594457-application-support-statistician'>A123 Systems Application Support Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999690594457-application-support-statistician'>A123 Systems Application Support Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
